# geomet

./: .coveragerc  .gitignore  .travis.yml  AUTHORS.txt  CONTRIBUTING.md  CONTRIBUTORS.txt  LICENSE.txt  README.md  packaging-requirements.txt  pyproject.toml  requirements.txt  setup.py  tox.ini  wkb_detail.md
.circleci/: config.yml
build-scripts/: 00-install-dependencies.sh  01-build.sh  02-test.sh  03-package.sh  04-push-dryrun.sh  04-push-test-pypi.sh  05-push.sh  README.md
docs/: dev_guide.md
geomet/: __init__.py  esri.py  geopackage.py  tool.py  util.py  wkb.py  wkt.py
geomet/tests/: __init__.py  esri_test.py  test_cli.py  test_geopackage.py  util_test.py  wkb_test.py  wkt_test.py
scripts/: geomet
